<resources>
    <string name="app_name">Operation Basic</string>
    <string name="welcomeText">OPERATION BASIC</string>
    <string name="testText">TEST</string>
    <string name="assessText">PERFORMANCE</string>
    <string name="statisticsTitleText">Statistics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mascot">Mascot</string>
    <string name="title">Title</string>
    <string name="results">results</string>
    <string name="addition">addition</string>
    <string name="subtraction">subtraction</string>
    <string name="welcome_bubble">welcome_bubble</string>
    <string name="answerHint">Type your answer here!</string>
    <string name="additionQuestion">a + b = ?</string>
    <string name="signUpText">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="firstNameText">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="institutionName">Institution/School</string>
    <string name="login">LOGIN</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="confPassText">Confirm Password</string>
    <string name="signupLoginText">Already have an account? Tap here to log in</string>
    <string name="loginSignUpText">Create New Account</string>
    <string name="subtractionQuestion">a - b = ?</string>
    <string name="resultText">[Insert Result Here]</string>

    <color name="peach">#FFEED2</color>
</resources>