<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signUpText"
        android:textSize="34sp"
        android:fontFamily="@font/arca_majora_3_bold"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/firstNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpEmailEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:fontFamily="@font/arca_majora_3_bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/schoolEditText"
        app:layout_constraintStart_toStartOf="@+id/schoolEditText"
        app:layout_constraintTop_toBottomOf="@+id/schoolEditText" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/arca_majora_3_bold"
        android:hint="@string/firstNameText"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameEditText"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:fontFamily="@font/arca_majora_3_bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpConfirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmailEditText"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailEditText" />

    <EditText
        android:id="@+id/schoolEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/institutionName"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:fontFamily="@font/arca_majora_3_bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpEmailEditText"
        app:layout_constraintEnd_toEndOf="@+id/lastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/lastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/lastNameText"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:fontFamily="@font/arca_majora_3_bold"
        app:layout_constraintBottom_toTopOf="@+id/schoolEditText"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/signUpConfirmPasswordEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/confPassText"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:fontFamily="@font/arca_majora_3_bold"
        app:layout_constraintEnd_toEndOf="@+id/signUpPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/signUpPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordEditText" />

    <Button
        android:id="@+id/signUpLayout_SignUpButton"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:text="@string/createAccount"
        android:textSize="20sp"
        android:theme="@style/Theme.OperationBasics"
        app:layout_constraintBottom_toTopOf="@+id/signup_LoginTextButton"
        app:layout_constraintEnd_toEndOf="@+id/signUpConfirmPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/signUpConfirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPasswordEditText" />

    <TextView
        android:id="@+id/signup_LoginTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/arca_majora_3_bold"
        android:text="@string/signupLoginText"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpLayout_SignUpButton"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/signUpLayout_SignUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpLayout_SignUpButton" />
</androidx.constraintlayout.widget.ConstraintLayout>