<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="302dp"
        android:layout_height="82dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/txt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/operation_basic_text_logo" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/arca_majora_3_bold"
        android:gravity="center"
        android:text="Email"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#261A00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_input_email"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/EmailBG"
        android:layout_width="269dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/txt_password"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/text_box_round" />

    <EditText
        android:id="@+id/user_input_email"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/arca_majora_3_bold"
        android:gravity="center"
        android:hint="@string/emailText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_password"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:fontFamily="@font/arca_majora_3_bold"
        android:gravity="center"
        android:text="password"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#261A00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_input_password"
        app:layout_constraintEnd_toEndOf="@+id/user_input_email"
        app:layout_constraintStart_toStartOf="@+id/user_input_email"
        app:layout_constraintTop_toBottomOf="@+id/user_input_email" />

    <ImageView
        android:id="@+id/PasswordBG"
        android:layout_width="269dp"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        app:layout_constraintVertical_bias="0.496"
        app:srcCompat="@drawable/text_box_round" />

    <EditText
        android:id="@+id/user_input_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/arca_majora_3_bold"
        android:gravity="center"
        android:hint="@string/passwordText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="129dp"
        android:layout_height="63dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:theme="@style/Theme.OperationBasics"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/login_signUpButton"
        app:layout_constraintEnd_toEndOf="@+id/user_input_password"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/user_input_password"
        app:layout_constraintTop_toBottomOf="@+id/user_input_password" />

    <TextView
        android:id="@+id/login_signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/arca_majora_3_bold"
        android:text="@string/loginSignUpText"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>