<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/peach"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="10">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/arca_majora_3_bold"
            android:gravity="center"
            android:text="@string/subtraction"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/brown"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/subtractionQuestionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/subtractionQuestionText"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/subtractionQuestion"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/subtractionAnswerEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <EditText
            android:id="@+id/subtractionAnswerEditText"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/answerHint"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="24sp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/subtractionNextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtractionQuestionText" />

        <ImageView
            android:id="@+id/subtractionNextButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/subtractionQuitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtractionAnswerEditText"
            app:srcCompat="@drawable/next_button" />

        <ImageView
            android:id="@+id/subtractionQuitButton"
            android:layout_width="95dp"
            android:layout_height="49dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtractionNextButton"
            app:srcCompat="@drawable/quit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
